# AiofAi

./: Cargo.toml  README.md  angular.json  deploy.sh  extension  package-lock.json
chatDB/: db  snap.0000000000000B2F  snap.00000000000014F3
chatdb/: db  snap.000000000000077D
gptui/: angular.json  package-lock.json  package.json  proxy.conf.json
gptui/src/: index.html
gptui/src/app/: api.service.ts  app.component.html  app.component.ts  app.routes.ts  chat.service.ts  events.service.ts  websocket.service.ts
gptui/src/app/bodycontainer/: bodycontainer.component.html  bodycontainer.component.spec.ts  bodycontainer.component.ts
gptui/src/app/chat/: chat.component.html  chat.component.ts
gptui/src/app/helpme/: helpme.component.html  helpme.component.spec.ts  helpme.component.ts
gptui/src/app/inputmsgbox/: inputmsgbox.component.html  inputmsgbox.component.ts
gptui/src/app/login/: login.component.html  login.component.ts
gptui/src/app/login-logout/: login-logout.component.spec.ts  login-logout.component.ts
gptui/src/app/msgbody/: msgbody.component.html  msgbody.component.spec.ts  (+1 more)
my_database/: db
src/: index.html  lib.rs  main.rs  message.rs  ref.rs  server.rs  session.rs  styles.scss
src/app/: app.component.html  app.component.spec.ts  app.component.ts
src/app/inputmsgbox/: inputmsgbox.component.html  inputmsgbox.component.spec.ts  inputmsgbox.component.ts
src/app/msgbody/: msgbody.component.html
src/app/sidebar/: sidebar.component.html
src/chatgpt/: mod.rs
src/db/: mod.rs
src/subscribe/: mod.rs  wx.rs
static/: index.html
(+7 files in other folders)
