[package]
name = "chatgpt-svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix-cors = "0.6.0"
actix-rt = "2.9.0"

env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
serde_json = "~1"
