[package]
name = "chatgpt-svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix-cors = "0.7.0"
actix-rt = "2.9.0"
tokio = { version = "1.18.2", features = ["full"] }
tungstenite = "0.21.0"
url = "2.5.0"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
serde_json = "~1"
sled = "0.34.7"
serde = { version = "1.0", features = [ "derive" ] }
reqwest = "0.12.0"
lazy_static = "1.4.0"
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]